--- a/index.htm
+++ b/index.htm
@@ -188,7 +188,7 @@
                             </div>
                             <div>
                                
-                              <a class="flex py-3 px-3 items-center gap-3 rounded-md hover:bg-gray-500/10 transition-colors duration-200 text-white cursor-pointer text-sm">
+                              <a class="flex py-3 px-3 items-center gap-3 rounded-md hover:bg-gray-500/10 transition-colors duration-200 text-white cursor-pointer text-sm" href="https://5nav.ml/assets/images/donate.webp">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <g clip-path="url(#clip0_3_64)">
@@ -267,7 +267,7 @@
                                             
                                         </div>
                                     </div>
-                                    <a class="flex py-3 px-3 items-center gap-3 rounded-md hover:bg-gray-500/10 transition-colors duration-200 text-white cursor-pointer text-sm">
+                                    <a class="flex py-3 px-3 items-center gap-3 rounded-md hover:bg-gray-500/10 transition-colors duration-200 text-white cursor-pointer text-sm"  href="https://5nav.ml/assets/images/donate.webp">
                                         <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                             <g clip-path="url(#clip0_3_60)">
                                                 <mask id="mask0_3_60" style="mask-type:alpha" maskunits="userSpaceOnUse" x="0" y="0" width="24" height="24">
