--- a/index.htm
+++ b/index.htm
@@ -165,8 +165,7 @@
                             </div>
                         </form>
                         <div class="px-3 pt-2 pb-3 text-center text-xs text-black/50 dark:text-white/50 md:px-4 md:pt-3 md:pb-6">
-                            <a href="https://5nav.ml/" target="_blank" rel="noreferrer" class="underline">猫猫GPT 2月29日版本</a>。
-                            免费试玩体验，我们的目标是传播喵意识和提升支持力度。<a href="https://5nav.ml/assets/images/donate.webp" class="underline">捐赠</a>喵~
+                            <a href="https://5nav.ml/" target="_blank" rel="noreferrer" class="underline">猫猫GPT 2月29日版本</a>，免费试玩体验。圣火昭昭，圣火耀耀，凡我弟子，喵喵喵喵！<a href="https://n.sinaimg.cn/sinakd20118/152/w750h1002/20210508/7caf-kpuunnc5114640.jpg" class="underline">点此🐭加入</a>地球猫猫教~
                         </div>
                     </div>
                 </main>
