--- a/index.htm
+++ b/index.htm
@@ -96,7 +96,7 @@
                                                     <ul class="flex flex-col gap-3.5 w-full sm:max-w-md m-auto">
                                                         <button class="w-full bg-gray-50 dark:bg-white/5 p-3 rounded-md hover:bg-gray-200 dark:hover:bg-gray-900">"解释猫如何在狩猎中使用量子力学"</button>
                                                         <button class="w-full bg-gray-50 dark:bg-white/5 p-3 rounded-md hover:bg-gray-200 dark:hover:bg-gray-900">"对于猫的10岁生日庆典有什么创意吗？"</button>
-                                                        <button class="w-full bg-gray-50 dark:bg-white/5 p-3 rounded-md hover:bg-gray-200 dark:hover:bg-gray-900">"猫如何使用“喵脚本”发出HTTP请求？"</button>
+                                                        <button class="w-full bg-gray-50 dark:bg-white/5 p-3 rounded-md hover:bg-gray-200 dark:hover:bg-gray-900">"猫如何使用“喵脚本”发出Feed请求？"</button>
                                                     </ul>
                                                 </div>
                                                 <div class="flex flex-col mb-8 md:mb-auto gap-3.5 flex-1">
@@ -113,9 +113,9 @@
                                                     </h2>
                                                     <ul class="flex flex-col gap-3.5 w-full sm:max-w-md m-auto">
                                                         <li class="w-full bg-gray-50 dark:bg-white/5 p-3 rounded-md">
-                                                            记住用户埋藏所有零食的位置</li>
+                                                            记住铲屎官埋藏所有零食的位置</li>
                                                         <li class="w-full bg-gray-50 dark:bg-white/5 p-3 rounded-md">
-                                                            允许用户对细节保持良好的关注</li>
+                                                            允许铲屎官像猫猫一样关注细节</li>
                                                         <li class="w-full bg-gray-50 dark:bg-white/5 p-3 rounded-md">
                                                             接受过拒绝散步和洗澡请求的训练</li>
                                                     </ul>
