--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="180.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="32.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="16.ico">
-    <title>CatGPT</title>
+    <title>CatGPT丨GPT-4 抢先内测版</title>
     <!-- <script src="tailwindcss-3.2.4.js"></script> -->
     <link rel="stylesheet" href="tailwindcss.css">
     <style>
